# icfp-2020

./: .gitignore  Cargo.toml  README.md  build.sh  key.txt  protocol.txt  run.sh  url.txt
andy/: main.rs
attilus/: main.rs
data/: ap.txt  b.txt  c.txt  car.txt  cdr.txt  cons.txt  equality_and_booleans.txt  f.txt  i.txt  infinite.txt  integer_division.txt  is_nil.txt  list.txt  neg.txt  nil.txt  predecessor.txt  product.txt  s.txt  snip.txt  stateless.txt  strict_less_than.txt  successor.txt  sum.txt  t.txt
galaxy/: init.txt  main.rs
jeff/: main.rs
justin/: main.rs
newton/: main.rs
src/: api.rs  ast.rs  draw.rs  eval.rs  game.rs  lex.rs  lib.rs  main.rs  parse.rs  token.rs  transport.rs
stateless/: main.rs
submit/: main.rs
